compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/MultiplatformCommonFacade.java
public final class MyFacadeKt /* mypack.MyFacadeKt*/ {
  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyCommonClassWithActualization getCommonVariable1();//  getCommonVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyCommonClassWithActualization getCommonVariable2();//  getCommonVariable2()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyCommonClassWithActualization getCommonVariableWithActualization();//  getCommonVariableWithActualization()

  public static final void commonFunction1(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction1(mypack.MyCommonClassWithActualization, mypack.MyCommonClass)

  public static final void commonFunction2(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction2(mypack.MyCommonClassWithActualization, mypack.MyCommonClass)

  public static final void commonFunctionWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunctionWithActualization(mypack.MyCommonClassWithActualization, mypack.MyCommonClass)

  public static final void setCommonVariable1(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization);//  setCommonVariable1(mypack.MyCommonClassWithActualization)

  public static final void setCommonVariable2(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization);//  setCommonVariable2(mypack.MyCommonClassWithActualization)

  public static final void setCommonVariableWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization);//  setCommonVariableWithActualization(mypack.MyCommonClassWithActualization)
}
